feat(mysql): add volume
add volume

Signed-off-by: mritd <mritd1234@gmail.com>

--- a/mysql/docker-compose.yml
+++ b/mysql/docker-compose.yml
@@ -5,8 +5,10 @@ services:
     container_name: mysql
     restart: always
     volumes:
-      - ./data:/var/lib/mysql
+      - data:/var/lib/mysql
     ports:
       - "3306:3306"
     environment:
       - MYSQL_ROOT_PASSWORD
+volumes:
+  data:
