--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,8 @@
+*/.env
 rabbitmq/data
-fuckgfw/client_config.json
-fuckgfw/log
 lightsocks/lightsocks.json
-dnsmasq/dnsmasq.hosts
 privoxy/config
 sentry/pgdb
-eolinker/log
-eolinker/mysql/data
 nginx/ssl
 nginx/conf.d
 nginx/log
@@ -18,5 +14,4 @@ taiga/conf/nginx/ssl
 taiga/conf/nginx/log
 v2ray/client.json
 v2ray/server.json
-shadowsocks2/.env
-*/.env
+lethe/lethe.yaml
