feat(shadowsocks2): add udp port
add udp port

Signed-off-by: mritd <mritd1234@gmail.com>

--- a/shadowsocks2/docker-compose.yaml
+++ b/shadowsocks2/docker-compose.yaml
@@ -10,6 +10,7 @@ services:
     restart: always
     ports:
       - "26:26"
+      - "26:26/udp"
       - "8053:8053"
       - "8053:8053/udp"
       - "8054:8054"
