--- a/coredns/coredns.service
+++ b/coredns/coredns.service
@@ -7,10 +7,12 @@ After=network.target
 PermissionsStartOnly=true
 LimitNOFILE=1048576
 LimitNPROC=512
-CapabilityBoundingSet=CAP_NET_BIND_SERVICE 
-AmbientCapabilities=CAP_NET_BIND_SERVICE 
-NoNewPrivileges=true 
-ExecStart=/usr/local/bin/coredns -conf=/etc/coredns/Corefile
+CapabilityBoundingSet=CAP_NET_BIND_SERVICE
+AmbientCapabilities=CAP_NET_BIND_SERVICE
+NoNewPrivileges=true
+User=coredns
+WorkingDirectory=~
+ExecStart=/usr/bin/coredns -conf=/etc/coredns/Corefile
 ExecReload=/bin/kill -SIGUSR1 $MAINPID
 Restart=on-failure
 
