--- a/coredns/docker-compose.yaml
+++ b/coredns/docker-compose.yaml
@@ -1,11 +1,11 @@
 version: '3'
 services:
   coredns:
-    image: coredns/coredns:1.0.6
+    image: coredns/coredns:1.5.0
     container_name: coredns
     restart: always
     network_mode: "host"
     volumes:
       - ./Corefile:/etc/Corefile
-      - ./core.hosts:/etc/core.hosts
+      - ./hosts:/etc/hosts
     command: -conf /etc/Corefile
