--- a/lethe/docker-compose.yaml
+++ b/lethe/docker-compose.yaml
@@ -1,13 +1,12 @@
 version: '3.6'
 services:
   lethe:
-    image: mritd/lethe:v1.0.2
+    image: mritd/lethe
     container_name: lethe
     restart: always
     tty: true
     ports:
-      - "111:111"
-      - "111:111/udp"
-      - "8123:8123"
+      - "8118:8118"
     volumes:
-      - "./lethe.yaml:/lethe.yaml"
+      - "./config:/etc/lethe"
+    command: ["--config","/etc/lethe/lethe.yaml"]
