--- a/postgres/docker-compose.yml
+++ b/postgres/docker-compose.yml
@@ -1,15 +1,17 @@
-version: '3'
+version: '3.7'
 services:
   postgres:
-    image: postgres:9.6.8-alpine
+    image: postgres:11.4-alpine
     container_name: postgres
     restart: always
     volumes: 
       - data:/var/lib/postgresql/data
+      - ./initdb:/docker-entrypoint-initdb.d
     ports:
       - "5432:5432"
     environment:
       - POSTGRES_USER
       - POSTGRES_PASSWORD
+
 volumes:
   data:
