--- a/nfs/docker-compose.yaml
+++ b/nfs/docker-compose.yaml
@@ -1,14 +1,14 @@
-# chown 65534:65533 /data/nfs
-# apt-get install apparmor-utils
-# apparmor_parser -r -W apparmor.conf
-# refs => https://github.com/ehough/docker-nfs-server/blob/develop/doc/feature/apparmor.md
-version: '3.6'
+version: '3.7'
 services:
   nfs:
     image: erichough/nfs-server:2.2.1
     container_name: nfs_server
     restart: always
-    volumes:
+    environment:
+    #  - NFS_VERSION=4
+    #  - NFS_DISABLE_VERSION_3=1
+      - NFS_LOG_LEVEL=DEBUG
+    volumes: 
       - ./exports:/etc/exports
       - /lib/modules:/lib/modules:ro
       - /data/nfs:/data
@@ -18,10 +18,10 @@ services:
     security_opt:
       - apparmor=erichough-nfs
     ports:
-      - "2049:2049"
-      - "2049:2049/udp"
       - "111:111"
       - "111:111/udp"
+      - "2049:2049"
+      - "2049:2049/udp"
       - "32765:32765"
       - "32765:32765/udp"
       - "32767:32767"
