fix(mysql): fix volumes
fix volumes

Signed-off-by: mritd <mritd@linux.com>

--- a/mysql/docker-compose.yml
+++ b/mysql/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     restart: always
     volumes:
       - data:/var/lib/mysql
-      - init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
       - "3306:3306"
     environment:
