--- a/pebble/docker-compose.yaml
+++ b/pebble/docker-compose.yaml
@@ -3,6 +3,7 @@ services:
   pebble:
     image: letsencrypt/pebble:latest
     container_name: pebble
+    restart: always
     environment:
       # TODO(@cpu): Delete this explicit GODEBUG env var once Pebble is built
       # with Go 1.13.x which defaults TLS 1.3 to on
