feat(yearning): remove cmd
remove cmd

Signed-off-by: mritd <mritd@linux.com>

--- a/yearning/docker-compose.yaml
+++ b/yearning/docker-compose.yaml
@@ -3,9 +3,8 @@ services:
   yearning:
     image: mritd/yearning
     container_name: yearning
-    restart: always
+    restart: on-failure
     ports:
       - "8000:8000"
     volumes:
       - "./conf.toml:/opt/yearning/conf.toml"
-    command: ["-s"]
