feat(nginx): add data dir
add data dir

Signed-off-by: mritd <mritd@linux.com>

--- a/nginx/docker-compose.yaml
+++ b/nginx/docker-compose.yaml
@@ -11,6 +11,7 @@ services:
       - ./conf.d:/etc/nginx/conf.d
       - ./nginxconfig.io:/etc/nginx/nginxconfig.io
       - ./ssl:/etc/nginx/ssl
+      - ./data:/data
       - ./log:/var/log/nginx/
     ports:
       - "80:80"
