feat(hysteria): add max-conn-client
add max-conn-client

Signed-off-by: mritd <mritd@linux.com>

--- a/hysteria/docker-compose.yaml
+++ b/hysteria/docker-compose.yaml
@@ -18,5 +18,7 @@ services:
       - /etc/hysteria/ssl/hysteria.cer
       - -key
       - /etc/hysteria/ssl/hysteria.key
+      - -max-conn-client
+      - "30000"
       - -obfs
       - bleem
