--- a/nginx/docker-compose.yaml
+++ b/nginx/docker-compose.yaml
@@ -1,22 +1,21 @@
 version: '3.7'
 services:
   nginx:
-    image: nginx:1.19.1-alpine
+    image: nginx:1.19-alpine
     container_name: nginx
     restart: always
     networks:
       - nginx
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
-      - ./conf.d:/etc/nginx/conf.d
-      - ./nginxconfig.io:/etc/nginx/nginxconfig.io
+      - ./vhost:/etc/nginx/conf.d/vhost
+      - ./common:/etc/nginx/conf.d/common
       - ./ssl:/etc/nginx/ssl
       - ./data:/data
       - ./log:/var/log/nginx/
     ports:
       - "80:80"
       - "443:443"
-  
 networks:
   nginx:
     external:
