feat(nginx): update nginx config
update nginx config

Signed-off-by: mritd <mritd@linux.com>

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,7 @@ rabbitmq/data
 privoxy/config
 sentry/pgdb
 nginx/ssl
-nginx/data
-nginx/vhost
+nginx/conf.d/vhost
 nginx/log
 tor/torrc
 coredns/core.hosts
