--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -27,6 +27,9 @@ http {
 	access_log /var/log/nginx/access.log;
 	error_log /var/log/nginx/error.log warn;
 
+	# hide server info
+	server_tokens off;
+
 	# SSL
 	ssl_session_timeout 1d;
 	ssl_session_cache shared:SSL:10m;
@@ -39,5 +42,7 @@ http {
 	resolver_timeout 2s;
 
 	# load configs
-	include /etc/nginx/conf.d/*.conf;
+	include /etc/nginx/conf.d/10-default-403.conf;
+	include /etc/nginx/conf.d/vhost/*.conf;
+	include /etc/nginx/conf.d/vhost/*/*.conf;
 }
