--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -4,9 +4,31 @@ input {
   }
 }
 
+#filter {
+#  date {
+#    match => ["split_message.timestamp","yyyy-MM-dd HH:mm:ss.SSS"]
+#    target => "@timestamp"
+#    timezone => "Asia/Shanghai"
+#  }
+#}
+
 output {
-  stdout {
-    codec => rubydebug
+  #stdout {
+  #  codec => rubydebug
+  #}
+
+  if [filename] {
+    file {
+      path => "/data/%{logdir_key}/%{filename}"
+      codec => line { format => "%{[@metadata][raw_message]}"}
+    }
+  } else {
+    file {
+      path => "/data/%{logdir_key}/%{project_key}-%{+yyyy-MM-dd}.log"
+      codec => line { format => "%{message}"}
+    }
   }
+
 }
+
 
