feat(nginx): add tz
add tz

Signed-off-by: mritd <mritd@linux.com>

--- a/nginx/docker-compose.yaml
+++ b/nginx/docker-compose.yaml
@@ -6,7 +6,10 @@ services:
     restart: always
     networks:
       - nginx
+    environment:
+      TZ: Asia/Shanghai
     volumes:
+      - /etc/timezone:/etc/timezone
       - ./nginx.conf:/etc/nginx/nginx.conf
       - ./conf.d:/etc/nginx/conf.d
       - ./ssl:/etc/nginx/ssl
