feat(mritd): update network
update network

Signed-off-by: mritd <mritd@linux.com>

--- a/mritd.com/docker-compose.yaml
+++ b/mritd.com/docker-compose.yaml
@@ -5,9 +5,9 @@ services:
     container_name: mritd_com
     restart: always
     networks:
-      - nginx
+      - caddy
 
 networks:
-  nginx:
+  caddy:
     external:
-      name: nginx
+      name: caddy
