--- a/caddy/conf/Caddyfile
+++ b/caddy/conf/Caddyfile
@@ -26,7 +26,7 @@
 }
 
 (COMMON_CONFIG) {
-	# 压缩支持
+    # 压缩支持
     encode zstd gzip
 
     # TLS 配置
@@ -37,6 +37,15 @@
 
     # HSTS
     import HSTS
+}
+
+# 开启 HTTP3 实验性支持
+{
+    servers :443 {
+        protocol {
+            experimental_http3
+        }
+    }
 }
 
 import /etc/caddy/*.caddy
