feat(unblockneteasemusic): enable proxy limitation
enable proxy limitation

Signed-off-by: mritd <mritd@linux.com>

--- a/unblockneteasemusic/docker-compose.yaml
+++ b/unblockneteasemusic/docker-compose.yaml
@@ -3,6 +3,7 @@ services:
   unblockneteasemusic:
     image: nondanee/unblockneteasemusic
     container_name: unblockneteasemusic
+    command: ["-s"]
     restart: always
     networks:
       - caddy
