--- a/idgen/docker-compose.yaml
+++ b/idgen/docker-compose.yaml
@@ -1,13 +1,12 @@
-version: '3.7'
+version: '3.9'
 services:
   idgen:
     image: mritd/idgen
     container_name: idgen
     networks:
-      - nginx
+      - caddy
     restart: always
 
 networks:
-  nginx:
-    external:
-      name: nginx
+  caddy:
+    name: caddy
