feat(caddy): update trojan
update trojan

Signed-off-by: mritd <mritd@linux.com>

--- a/caddy/conf/Caddyfile
+++ b/caddy/conf/Caddyfile
@@ -119,6 +119,12 @@
             experimental_http3
         }
     }
+
+    trojan {
+		caddy
+		no_proxy
+		users {$TROJAN_PASSWORD}
+	}
 }
 
 import /etc/caddy/*.caddy
