--- a/caddy/conf/Caddyfile
+++ b/caddy/conf/Caddyfile
@@ -100,6 +100,26 @@
     import LOG_COMMON "{args.0}"
 }
 
+(COMMON_TLS) {
+    # 压缩支持
+    encode zstd gzip
+
+    # TLS 配置
+    tls {
+        import TLS_INTERMEDIATE
+        resolvers 8.8.8.8
+    }
+
+    # HSTS
+    import HSTS
+
+    # security config
+    import SECURITY
+
+    # log
+    import LOG_COMMON "{args.0}"
+}
+
 # 开启 HTTP3 实验性支持
 # sysctl -w net.core.rmem_max=2500000
 # ref https://github.com/lucas-clemente/quic-go/wiki/UDP-Receive-Buffer-Size
