fix(poetbot): fix service name
fix service name

Signed-off-by: kovacs <mritd@linux.com>

--- a/poetbot/docker-compose.yaml
+++ b/poetbot/docker-compose.yaml
@@ -1,6 +1,6 @@
-version: '3.8'
+version: '3.9'
 services:
-  caddy:
+  poetbot:
     image: mritd/poetbot
     container_name: poetbot
     restart: always
