feat(caddy): remove default acme config
remove default acme config

Signed-off-by: kovacs <mritd@linux.com>

--- a/caddy/conf/Caddyfile
+++ b/caddy/conf/Caddyfile
@@ -126,8 +126,8 @@
 {
     # ZeroSSL
     acme_ca https://acme.zerossl.com/v2/DV90
-    email {$ACME_EMAIL} 
-    cert_issuer {$ACME_ISSUER} {$ACME_ISSUER_PARAMS}
+#    email {$ACME_EMAIL}
+#    cert_issuer {$ACME_ISSUER} {$ACME_ISSUER_PARAMS}
 
     # ECC cert
     key_type p384
