feat(caddy): update caddy file
update caddy file

Signed-off-by: kovacs <mritd@linux.com>

--- a/caddy/conf/Caddyfile
+++ b/caddy/conf/Caddyfile
@@ -115,6 +115,9 @@
         }
     }
 
+    order trojan before reverse_proxy
+    order teapot after trojan
+
     trojan {
         caddy
         no_proxy
