--- a/caddy/conf/Caddyfile
+++ b/caddy/conf/Caddyfile
@@ -64,7 +64,7 @@
 
     # TLS 配置
     tls {
-        import TLS_INTERMEDIATE
+        import TLS_MODERN
         import ACME_GANDI
         resolvers 8.8.8.8
     }
@@ -85,7 +85,7 @@
 
     # TLS 配置
     tls {
-        import TLS_INTERMEDIATE
+        import TLS_MODERN
         import ACME_CLOUDFLARE
         resolvers 8.8.8.8
     }
