feat(caddy): add env_file
add env_file

Signed-off-by: kovacs <mritd@linux.com>

--- a/caddy/docker-compose.yaml
+++ b/caddy/docker-compose.yaml
@@ -6,16 +6,9 @@ services:
     restart: always
     networks:
       - caddy
+    env_file: .env
     environment:
       TZ: Asia/Shanghai
-      ACME_EMAIL:
-      ACME_ISSUER:
-      ACME_ISSUER_PARAMS:
-      GANDI_API_TOKEN:
-      CLOUDFLARE_API_TOKEN:
-      TELEGRAM_DOMAIN:
-      TROJAN_DOMAIN:
-      TROJAN_PASSWORD:
     volumes:
       - /etc/timezone:/etc/timezone
       - ./conf:/etc/caddy
