feat(mysql): add platform
add platform

Signed-off-by: kovacs <mritd@linux.com>

--- a/mysql/docker-compose.yaml
+++ b/mysql/docker-compose.yaml
@@ -3,6 +3,7 @@ services:
   mysql:
     image: mysql:8
     container_name: mysql
+    platform: linux/amd64
     restart: always
     environment:
       TZ: Asia/Shanghai
