feat(caddy): update log format
update log format

Signed-off-by: kovacs <mritd@linux.com>

--- a/caddy/conf/Caddyfile
+++ b/caddy/conf/Caddyfile
@@ -124,7 +124,7 @@
 
     log trojan {
         include caddy.listeners.trojan
-        format json {
+        format console {
             time_format "iso8601"
         }
         output file "/data/logs/trojan.log" {
