--- a/mritd.com/docker-compose.yaml
+++ b/mritd.com/docker-compose.yaml
@@ -6,7 +6,12 @@ services:
     restart: always
     networks:
       - caddy
+    environment:
+      TZ: Asia/Shanghai
+    volumes:
+      - /etc/timezone:/etc/timezone
 
 networks:
   caddy:
     name: caddy
+    external: true
