--- a/caddy/conf/Caddyfile
+++ b/caddy/conf/Caddyfile
@@ -110,75 +110,7 @@
         protocols h1 h2 h3
     }
 
-    servers :5212 {
-        listener_wrappers {
-            trojan
-        }
-        protocols h1 h2 h3
-    }
-
-    servers :5213 {
-        listener_wrappers {
-            trojan
-        }
-        protocols h1 h2 h3
-    }
-
-    servers :5214 {
-        listener_wrappers {
-            trojan
-        }
-        protocols h1 h2 h3
-    }
-
-    servers :5215 {
-        listener_wrappers {
-            trojan
-        }
-        protocols h1 h2 h3
-    }
-
-    servers :5216 {
-        listener_wrappers {
-            trojan
-        }
-        protocols h1 h2 h3
-    }
-
-    servers :5217 {
-        listener_wrappers {
-            trojan
-        }
-        protocols h1 h2 h3
-    }
-
-    servers :5218 {
-        listener_wrappers {
-            trojan
-        }
-        protocols h1 h2 h3
-    }
-
-    order trojan before reverse_proxy
-    order teapot after trojan
-
-    trojan {
-        caddy
-        no_proxy
-        users {$TROJAN_PASSWORD:thisisunsafe}
-    }
-
-    log trojan {
-        include caddy.listeners.trojan
-        format console {
-            time_format "iso8601"
-        }
-        output file "/data/logs/trojan.log" {
-            roll_size 100mb
-            roll_keep 3
-            roll_keep_for 7d
-        }
-    }
+    import XSERVERS
 }
 
 import /etc/caddy/*.caddy
