--- a/ssh/docker-compose.yaml
+++ b/ssh/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
     hostname: ssh
     restart: always
     environment:
-      TZ: Asia/Shanghai
+      - TZ=Asia/Shanghai
     volumes:
       - /volumes:/volumes
     ports:
