--- a/adguard/docker-compose.yaml
+++ b/adguard/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
       caddy:
         ipv4_address: 172.19.0.88
     environment:
-      TZ: Asia/Shanghai
+      - TZ=Asia/Shanghai
     volumes:
       - /etc/timezone:/etc/timezone
       - conf:/opt/adguardhome/conf
