--- a/mritd.com/docker-compose.yaml
+++ b/mritd.com/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
     networks:
       - caddy
     environment:
-      TZ: Asia/Shanghai
+      - TZ=Asia/Shanghai
     volumes:
       - /etc/timezone:/etc/timezone
 
