--- a/nginx/docker-compose.yaml
+++ b/nginx/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
     networks:
       - nginx
     environment:
-      TZ: Asia/Shanghai
+      - TZ=Asia/Shanghai
     volumes:
       - /etc/timezone:/etc/timezone
       - ./nginx.conf:/etc/nginx/nginx.conf
