--- a/redis/docker-compose.yaml
+++ b/redis/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     container_name: redis
     restart: always
     environment:
-      TZ: Asia/Shanghai
+      - TZ=Asia/Shanghai
     volumes:
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
