--- a/sonar/docker-compose.yaml
+++ b/sonar/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
     container_name: sonar
     restart: always
     environment:
-      TZ: Asia/Shanghai
+      - TZ=Asia/Shanghai
     volumes:
       - /etc/timezone:/etc/timezone
       - data:/opt/sonarqube/data
